--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col swiper-container swiper-gallery">
+<div class="flex-col w-h-100 swiper-container swiper-gallery">
     <div class="swiper-wrapper">
 
         <mat-card class="h-100 swiper-slide card" *ngFor="let slide of slides">
@@ -17,7 +17,7 @@
         <mat-icon>close</mat-icon>
     </div>
 
-    <div class="swiper-controls">
+    <div class="flex-row swiper-controls">
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
     </div>
