--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col center-row section">
+<div class="flex-col center-all section">
 
     <div class="home-content flex-col center-all">
         <h1>Добро пожаловать в<br>
