--- a/src/app/components/tutor/tutor.component.html
+++ b/src/app/components/tutor/tutor.component.html
@@ -5,7 +5,7 @@
 
     <!-- Desktop version -->
     <div class="h-100 content">
-        <div class="flex-col center-row left-col education">
+        <div class="flex-col center-row left-col flex-grow">
             <img class="w-100 education__diploma" alt="diploma image" loading="lazy" [src]="diplomaImg[0].image"
                 (click)="openGallery(diplomaImg, 0)">
             <div class="flex-col center-col education__text">
