--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -7,23 +7,25 @@
         <div class="flex-col center-col left-col">
             <div class="flex-col center-row h-100 left-col__wrapper">
                 <h3 class="cards__title">Почему <span class="sigma-font">ΣΙΓΜΑ</span> ?</h3>
-                <div class="center-row cards">
-                    <mat-card *ngFor="let card of cards" class="flex-col w-h-100 card">
-                        <mat-card-header class="flex-row center-row card__header">
-                            <mat-card-title>{{ card.title }}</mat-card-title>
-                            <img [src]="card.image" alt="icon" class="card__icon">
-                        </mat-card-header>
-                        <!-- roboto-font ? -->
-                        <mat-card-content class="card__content">
-                            <span>{{ card.contentLong }}</span>
-                        </mat-card-content>
-                    </mat-card>
+                <div class="flex-col center-col flex-grow">
+                    <div class="center-row cards">
+                        <mat-card *ngFor="let card of cards" class="flex-col w-h-100 card">
+                            <mat-card-header class="flex-row center-row card__header">
+                                <mat-card-title>{{ card.title }}</mat-card-title>
+                                <img [src]="card.image" alt="icon" class="card__icon">
+                            </mat-card-header>
+                            <!-- roboto-font ? -->
+                            <mat-card-content class="card__content">
+                                <span>{{ card.contentLong }}</span>
+                            </mat-card-content>
+                        </mat-card>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="flex-col right-col">
-            <div class="flex-col h-100 wrapper">
+            <div class="flex-col center-col h-100 wrapper">
                 <div class="flex-col center-row price">
                     <span class="price__first">
                         Первое пробное занятие бесплатно!
@@ -32,7 +34,7 @@
                     <span class="price__list">
                         Прайс-лист:
                     </span>
-                    <table class="price__table">
+                    <table class="w-100 price__table">
                         <tr>
                             <td>Разовое занятие</td>
                             <td>2000 рублей</td>
