--- a/src/styles/buttons/inp-button.scss
+++ b/src/styles/buttons/inp-button.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
 
-    border-radius: 5px;
+    border-radius: 4px;
 
     padding: 5px 8px;
     line-height: 100%;
@@ -79,6 +79,7 @@
     min-height: 40px;
     font-family: "Didact Gothic", sans-serif;
     font-style: normal;
+    flex-grow: 1;
 
     transition:
         background-color 0.25s ease-in-out,
