--- a/src/app/components/tutor/tutor.component.scss
+++ b/src/app/components/tutor/tutor.component.scss
@@ -44,6 +44,10 @@
         padding: 0;
         font-size: 18px;
         gap: 6px;
+
+        li {
+            text-align: start;
+        }
     }
 
     &__pillar-top {
