code cleaning, styles refactoring 2

--- a/src/app/components/contacts/contacts.component.scss
+++ b/src/app/components/contacts/contacts.component.scss
@@ -17,12 +17,20 @@
 
     h4 {
         margin: 12px 0 6px 0;
-        font-size: 18px;
+        font-size: 22px;
 
         &:not(:first-child) {
             margin-top: 12px;
         }
     }
+
+    span {
+        font-size: 18px;
+    }
+}
+
+.sigma-font {
+    font-size: 28px !important;
 }
 
 .social-media {
