--- a/src/app/components/studio/studio.component.html
+++ b/src/app/components/studio/studio.component.html
@@ -85,7 +85,7 @@
     <div class="flex-col center-row w-100 content-mobile" *ngIf="isMobile">
 
         <div class="flex-col w-100">
-            <div class="flex-col gallery-text__title">
+            <div class="flex-col gallery-text__title andika-bold">
                 <h3>Студия <span class="sigma-font">ΣΙΓΜΑ</span></h3>
             </div>
             <div class="gallery-thumbs">
@@ -115,7 +115,7 @@
         </ul>
 
         <div class="flex-col w-100">
-            <div class="flex-col reviews-text__title">
+            <div class="flex-col reviews-text__title andika-bold">
                 <h3>Что говорят студенты:</h3>
             </div>
             <div class="reviews-slides">
