--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -1,5 +1,4 @@
 .newclass-form {
-    justify-content: flex-start;
     min-width: 400px;
     max-width: 400px;
     min-height: 400px;
@@ -142,12 +141,6 @@ mat-label {
     font-size: 16px;
 }
 
-.submit-button {
-    margin-top: 10px;
-    padding: 10px;
-    width: 100%;
-}
-
 .disclaimer {
     margin-top: 10px;
     font-size: 12px;
@@ -171,6 +164,14 @@ mat-label {
 }
 
 .submit {
+    padding: 0 20px;
+
+    &__button {
+        margin-top: 10px;
+        padding: 10px;
+        width: 100%;
+    }
+
     &__message {
         font-size: 22px;
     }
