--- a/src/app/components/studio/studio.component.scss
+++ b/src/app/components/studio/studio.component.scss
@@ -1,7 +1,7 @@
 .content {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto auto;
     row-gap: 2vh;
 }
 
@@ -204,7 +204,7 @@
 
     .reviews-content {
         margin: 10px 0;
-        font-size: calc(10px + 0.2vw);
+        font-size: calc(10px + 0.25vw);
         text-align: justify;
         padding: 0 20px;
         color: var(--dark-alt-color);
